test/compilable/test20958.d
import imports.u20958;
