test/fail_compilation/fail355.d
import imports.fail355 : nonexistent;
